--- a/blog-api/src/main/resources/application.yml
+++ b/blog-api/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 20MB
 #MyBatis-Plus配置
 mybatis-plus:
   configuration:
